--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-Data/Logs/
-Data/Persistent/EncryptionKey
-Data/Temporary/*
-Web/_Resources/*
-Configuration/PackageStates.php
-Configuration/Settings.yaml
-Packages/.Shortcuts
+/Data/Logs/
+/Data/Persistent/EncryptionKey
+/Data/Temporary/*
+/Web/_Resources/*
+/Configuration/PackageStates.php
+/Configuration/Settings.yaml
+/Packages/.Shortcuts
 /nbproject/
