Now following FLOW3 and FLuid in a copy on github

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "Packages/Framework/TYPO3.FLOW3"]
 	path = Packages/Framework/TYPO3.FLOW3
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.FLOW3.git
+	url = git://git@github.com:hnesk/TYPO3.FLOW3.git
 [submodule "Packages/Framework/TYPO3.Fluid"]
 	path = Packages/Framework/TYPO3.Fluid
-	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Fluid.git
+	url = git://git@github.com:hnesk/TYPO3.Fluid.git
 [submodule "Packages/Framework/TYPO3.Kickstart"]
 	path = Packages/Framework/TYPO3.Kickstart
 	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Kickstart.git
