--- a/.gitmodules
+++ b/.gitmodules
@@ -27,13 +27,13 @@
 	url = git://git.typo3.org/FLOW3/BuildEssentials.git
 [submodule "Packages/Application/Org.Gucken.Events"]
 	path = Packages/Application/Org.Gucken.Events
-	url = ssh://gitosis@gucken.org/Org.Gucken.Events.git
+	url = git://git@github.com:hnesk/Org.Gucken.Events.git
 [submodule "Packages/Application/Org.Gucken.Bielefeld"]
 	path = Packages/Application/Org.Gucken.Bielefeld
-	url = ssh://gitosis@gucken.org/Org.Gucken.Bielefeld.git
+	url = git://git@github.com:hnesk/Org.Gucken.Bielefeld.git
 [submodule "Packages/Application/Org.Gucken.Rad"]
 	path = Packages/Application/Org.Gucken.Rad
-	url = ssh://gitosis@gucken.org/Org.Gucken.Rad.git
+	url = git://git@github.com:hnesk/Org.Gucken.Rad.git
 [submodule "Packages/Application/Imagine"]
 	path = Packages/Application/Imagine
 	url = git://git.typo3.org/FLOW3/Packages/Imagine.git
