--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "Packages/Framework/TYPO3.FLOW3"]
 	path = Packages/Framework/TYPO3.FLOW3
-	url = git://git@github.com:hnesk/TYPO3.FLOW3.git
+	url = git://github.com/hnesk/TYPO3.FLOW3.git
 [submodule "Packages/Framework/TYPO3.Fluid"]
 	path = Packages/Framework/TYPO3.Fluid
-	url = git://git@github.com:hnesk/TYPO3.Fluid.git
+	url = git://github.com/hnesk/TYPO3.Fluid.git
 [submodule "Packages/Framework/TYPO3.Kickstart"]
 	path = Packages/Framework/TYPO3.Kickstart
 	url = git://git.typo3.org/FLOW3/Packages/TYPO3.Kickstart.git
@@ -27,13 +27,13 @@
 	url = git://git.typo3.org/FLOW3/BuildEssentials.git
 [submodule "Packages/Application/Org.Gucken.Events"]
 	path = Packages/Application/Org.Gucken.Events
-	url = git://git@github.com:hnesk/Org.Gucken.Events.git
+	url = git://github.com/hnesk/Org.Gucken.Events.git
 [submodule "Packages/Application/Org.Gucken.Bielefeld"]
 	path = Packages/Application/Org.Gucken.Bielefeld
-	url = git://git@github.com:hnesk/Org.Gucken.Bielefeld.git
+	url = git://github.com/hnesk/Org.Gucken.Bielefeld.git
 [submodule "Packages/Application/Org.Gucken.Rad"]
 	path = Packages/Application/Org.Gucken.Rad
-	url = git://git@github.com:hnesk/Org.Gucken.Rad.git
+	url = git://github.com/hnesk/Org.Gucken.Rad.git
 [submodule "Packages/Application/Imagine"]
 	path = Packages/Application/Imagine
 	url = git://git.typo3.org/FLOW3/Packages/Imagine.git
