added composer to the mix

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-/Data/Logs/
-/Data/Persistent/*
-/Data/Temporary/*
-/Web/_Resources/*
-/Configuration/PackageStates.php
-/Configuration/Settings.yaml
-/Configuration/Production/IncludeCachedConfigurations.php
-/Configuration/Testing/
-/Packages/.Shortcuts
-/nbproject/
-/Build/Reports/
-/Packages/Assetic/
+/Build/
+/Configuration/
+/Data/
+/Packages/
+/Web/
+/bin/
+/Readme.txt
+/Upgrading.txt
+/flow
+/flow.bat
+/.idea
+composer.lock
