--- a/Configuration/Development/Settings.yaml.example
+++ b/Configuration/Development/Settings.yaml.example
@@ -8,15 +8,14 @@
 # possible configuration options.                                        #
 #                                                                        #
 
-
 TYPO3:
-  FLOW3:
+  Flow:
     persistence:
       backendOptions:
-        dbname: 'quickstart' # adjust to your database name
+        dbname: 'flow'       # adjust to your database name
         user: ''             # adjust to your database user
         password: ''         # adjust to your database password
 
        # if you want to log executed SQL queries, enable the next 2 lines
-      doctrine:
-        sqlLogger: 'TYPO3\FLOW3\Persistence\Doctrine\Logging\SqlLogger'
+#      doctrine:
+#        sqlLogger: 'TYPO3\Flow\Persistence\Doctrine\Logging\SqlLogger'
