--- a/Configuration/Production/Settings.yaml.example
+++ b/Configuration/Production/Settings.yaml.example
@@ -8,15 +8,10 @@
 # possible configuration options.                                        #
 #                                                                        #
 
-
 TYPO3:
-  FLOW3:
+  Flow:
     persistence:
       backendOptions:
-        dbname: 'quickstart' # adjust to your database name
+        dbname: 'flow'       # adjust to your database name
         user: ''             # adjust to your database user
         password: ''         # adjust to your database password
-      doctrine:
-        # If you have APC, you should consider using it for Production,
-        # also MemcacheCache and XcacheCache exist.
-        # cacheImplementation: 'Doctrine\Common\Cache\ApcCache'
