--- a/Configuration/Routes.yaml
+++ b/Configuration/Routes.yaml
@@ -1,20 +1,30 @@
-##
-# FLOW3 subroutes
-#
+#                                                                        #
+# Routes configuration                                                   #
+#                                                                        #
+# This file contains the configuration for the MVC router.               #
+# Just add your own modifications as necessary.                          #
+#                                                                        #
+# Please refer to the Flow manual for possible configuration options.   #
+#                                                                        #
+
 -
   name: 'Gucken.Org'
   uriPattern: '<GuckenOrgSubRoutes>'
   defaults:
-    '@package':    'Org.Gucken.Events'    
-    '@format': 'html'  
+    '@package':    'Org.Gucken.Events'
+    '@format': 'html'
   subRoutes:
     GuckenOrgSubRoutes:
       package: Org.Gucken.Events
-#-
-#  name: 'FLOW3'
-#  uriPattern: '<FLOW3Subroutes>'
-#  defaults:
-#    '@format': 'html'
-#  subRoutes:
-#    FLOW3Subroutes:
-#      package: TYPO3.FLOW3
+
+##
+# Flow subroutes
+#
+-
+  name: 'Flow'
+  uriPattern: '<FlowSubroutes>'
+  defaults:
+    '@format': 'html'
+  subRoutes:
+    FlowSubroutes:
+      package: TYPO3.Flow
