--- a/Configuration/Settings.yaml.example
+++ b/Configuration/Settings.yaml.example
@@ -1,47 +1,24 @@
 #                                                                        #
-# Example Settings for Gucken.org                                        #
+# Example Settings                                                       #
 #                                                                        #
 # This file contains settings for various parts of the application.      #
 # Copy this file to Settings.yaml, and adjust as necessary.              #
 #                                                                        #
+# Please refer to the default settings file(s) or the manuals for        #
+# possible configuration options.                                        #
 #                                                                        #
 
 TYPO3:
-  FLOW3:
-    security:
-      cryptography:
-        BCryptHashingStrategy:
-          cost: 10
-
-
+  Flow:
     persistence:
-     backendOptions:
-      driver: 'pdo_mysql'
-      dbname: 'gucken_org'   # adjust to your database name
-      user: 'root'        # adjust to your database user
-      password: '[INSERT PASSWORD]'        # adjust to your database password
-      host: '127.0.0.1'   # adjust to your database host
-      path: '127.0.0.1'   # adjust to your database host
-      port: 3306
-      doctrine:
-       # If you have APC, you should consider using it for Production,
-       # also MemcacheCache and XcacheCache exist.
-#        cacheImplementation: 'Doctrine\Common\Cache\ApcCache'
-       # when using MySQL and UTF-8, this should help with connection encoding issues
-        dbal:
-          sessionInitialization: 'SET NAMES utf8 COLLATE utf8_unicode_ci'
-    session:
-      PHPSession:
-        cookie:
-          # no special session lifetime => browser session
-          lifetime: 0
 
-    i18n:
-      # The default locale identifier.
-      defaultLocale: de
+      # It is good practice to not specify user name and password of the database
+      # connection in this global Settings.yaml file. Rather specify them in the
+      # settings of the respective context (Production / Development ...).
+      backendOptions:
+        host: '127.0.0.1'    # adjust to your database host
 
-
-Org:
-  Gucken:
-    Events:
-      currentView: bielefeld
+  # You might need to uncomment the following lines and specify
+  # the location of the PHP binary manually.
+  #  core:
+  #    phpBinaryPathAndFilename: 'C:/path/to/php.exe'
