--- a/composer.json
+++ b/composer.json
@@ -7,24 +7,19 @@
         "bin-dir": "bin"
     },
     "require": {
-        "typo3/flow": "dev-master",
-        "typo3/welcome": "dev-master",
-        "typo3/fluid": "@dev",
-        "typo3/party": "@dev",
-        "typo3/eel": "@dev",
-        "typo3/media": "@dev",
-        "typo3/twitter-bootstrap": "dev-master",
+        "typo3/flow": "2.2.*",
+        "typo3/welcome": "2.2.*",
+        "typo3/media": "~1.1",
         "hnesk/todate": "~1.0",
         "doctrine/migrations": "@dev"
     },
     "require-dev": {
-        "typo3/buildessentials": "dev-master",
-        "phpunit/phpunit": "3.7.*",
+        "typo3/kickstart": "2.2.*",
+        "typo3/buildessentials": "2.2.*",
+        "phpunit/phpunit": "4.0.*",
         "mikey179/vfsstream": "1.2.*"
     },
     "scripts": {
-        "post-update-cmd": "TYPO3\\Flow\\Composer\\InstallerScripts::postUpdateAndInstall",
-        "post-install-cmd": "TYPO3\\Flow\\Composer\\InstallerScripts::postUpdateAndInstall",
         "post-package-update":"TYPO3\\Flow\\Composer\\InstallerScripts::postPackageUpdateAndInstall",
         "post-package-install":"TYPO3\\Flow\\Composer\\InstallerScripts::postPackageUpdateAndInstall"
     }
