--- a/Web/.htaccess
+++ b/Web/.htaccess
@@ -1,13 +1,13 @@
 #
-# FLOW3 context setting
+# TYPO3 Flow context setting
 #
 
 # You can specify a default context by activating this option:
-# SetEnv FLOW3_CONTEXT Production
+# SetEnv FLOW_CONTEXT Production
 
-# If the root path is not the parent of the Web directory, FLOW3's root path must be
-# specified manually:
-# SetEnv FLOW3_ROOTPATH /var/www/myapp/
+# If the root path is not the parent of the Web directory,
+# TYPO3 Flow's root path must be specified manually:
+# SetEnv FLOW_ROOTPATH /var/www/myapp/
 
 #
 # mod_rewrite configuration
@@ -18,9 +18,9 @@
 	RewriteEngine On
 
 	# Set flag so we know URL rewriting is available
-	SetEnv FLOW3_REWRITEURLS 1
+	SetEnv FLOW_REWRITEURLS 1
 
-	# You will have to enable the following option and change the path if you
+	# You will have to change the path in the following option if you
 	# experience problems while your installation is located in a subdirectory
 	# of the website root.
 	RewriteBase /
@@ -31,16 +31,16 @@
 	# Stop rewrite process if the path points to a static file anyway
 	RewriteCond %{REQUEST_FILENAME} -f [OR]
 	RewriteCond %{REQUEST_FILENAME} -l [OR]
-	RewriteCond %{REQUEST_FILENAME} -d 
+	RewriteCond %{REQUEST_FILENAME} -d
 	RewriteRule .* - [L]
 
 	# Perform rewriting of persistent private resources
-	RewriteRule ^(_Resources/Persistent/[a-z0-9]+/(.+/)?[a-f0-9]{40})/.+(\..+) $1$3 [L]
+	RewriteRule ^(_Resources/Persistent/[a-zA-Z0-9]+/(.+/)?[a-f0-9]{40})/.+(\..+) $1$3 [L]
 
-	# Perform rewriting of persitent resource files
+	# Perform rewriting of persistent resource files
 	RewriteRule ^(_Resources/Persistent/.{40})/.+(\..+) $1$2 [L]
 
-	# Make sure that not existing resources don't execute FLOW3
+	# Make sure that not existing resources don't execute TYPO3 Flow
 	RewriteRule ^_Resources/.* - [L]
 
 	# Continue only if the file/symlink/directory does not exist
@@ -58,8 +58,8 @@
 <IfModule mod_setenvif.c>
 
 	# Redirect authorization header when PHP is running as CGI
-	SetEnvIfNoCase Authorization "Basic ([a-zA-Z0-9\+/=]+)" REMOTE_AUTHORIZATION=$1
+	SetEnvIfNoCase Authorization "Basic ([a-zA-Z0-9\+/=]+)" REMOTE_AUTHORIZATION=$0
 
 </IfModule>
 
-ErrorDocument 500 "<h1>Application Error</h1><p>The FLOW3 application could not be launched.</p>"
+ErrorDocument 500 "<h1>Application Error</h1><p>The TYPO3 Flow application could not be launched.</p>"
